--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4-M2"
+    ext.kotlin_version = "1.6.21"
     repositories {
         google()
-        jcenter()
-        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
+        mavenCentral()
+        maven { url "https://repo.spring.io/release" }
+//        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.0"
+        classpath 'com.android.tools.build:gradle:7.2.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -18,8 +19,8 @@ buildscript {
 allprojects {
     repositories {
         google()
-        jcenter()
-        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
+        mavenCentral()
+//        maven { url "https://dl.bintray.com/kotlin/kotlin-eap" }
     }
 }
 
